# thalassa

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  Cargo.toml
benchmarks/benches/: BENCHMARKS.md  perf.rs  perf_instructions.rs  sample.vlbytes_100KB.tlspl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip.rs
src/: error.rs  lib.rs  types.rs  util.rs
src/types/: bytes.rs  collections.rs  integer.rs  optional.rs  strings.rs
thalassa-derive/: Cargo.toml  LICENSE-APACHE  README.md
thalassa-derive/src/: lib.rs
thalassa-derive/tests/: derive.rs
thalassa-derive/tests/derive/: fail.enum_nakd_discr.rs  fail.enum_nakd_discr.stderr  fail.enum_untagged.rs  fail.enum_untagged.stderr  fail.enum_viral_discr.rs  fail.enum_viral_discr.stderr  pass.cowlecction.rs  pass.derive_all.rs  pass.derive_with_select.rs  pass.enum_derive.rs  pass.enum_extensible.rs  pass.enum_other.rs  pass.enum_untagged.rs  pass.life_generics.rs  pass.struct_derive.rs  pass.transparent_container.rs  pass.tuple_struct.rs
