[package]
name = "thalassa-derive"
version = "0.0.1-pre.7"
edition = "2024"
rust-version = "1.85"
include = ["src/**/*", "LICENSE-*", "README.md"]
description = "`thalassa` derive macros"
readme = "README.md"
documentation = "https://docs.rs/thalassa-derive"
repository = "https://github.com/OtaK/thalassa"
license = "MIT OR Apache-2.0"
keywords = ["tlspl", "mls", "tls", "rfc8446"]
categories = ["parser-implementations", "encoding", "wasm"]
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
darling = "0.23"
bitflags = "2"

[dev-dependencies]
thalassa = { path = "..", features = ["derive"] }
trybuild = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
